# boringtun

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.coverage  Dockerfile.test  Enhancements.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  LICENSE.md  MISSION_COMPLETE_SUMMARY.md  Makefile  Mayhemfile.new_mac  NETWORK_INTEGRATION_TESTS_STATUS.md  README.md  TEST_COVERAGE_REPORT.md  VERIFIED_TEST_COVERAGE_REPORT.md  azure-pipelines.yml  deny.toml  docker-compose.yaml  mac.docker.sh  run-tests.sh  setup-ubuntu.sh  vector.toml  vvv  xxx
.cargo/: config  config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  linters.yml  mayhem.yml  msbuild.yml  on-push.yaml  rust.yml  semgrep.yml  ssl-docker.yml  tests.yml
benches/: mod.rs
boringtun/: Cargo.toml
boringtun-cli/: Cargo.toml
boringtun-cli/src/: main.rs
boringtun/benches/: mod.rs
boringtun/benches/crypto_benches/: blake2s_benching.rs  chacha20poly1305_benching.rs  main.rs  x25519_public_key_benching.rs  x25519_shared_key_benching.rs
boringtun/benches/throughput_benches/: main.rs
boringtun/fuzz/: .gitignore  Cargo.toml
boringtun/fuzz/fuzz_targets/: check_tun_name.rs  new_mac.rs
boringtun/src/: benchmarks_example.rs  jni.rs  lib.rs  serialization.rs  task.rs  wireguard_ffi.h
boringtun/src/crypto/: mod.rs
boringtun/src/crypto/blake2s/: tests.rs
boringtun/src/crypto/chacha20poly1305/: mod.rs
boringtun/src/crypto/chacha20poly1305_custom/: tests.rs
boringtun/src/crypto/x25519/: mod.rs
boringtun/src/device/: allowed_ips.rs  api.rs  api_old.rs  async_impl.rs  daita.rs  dev_lock.rs  drop_privileges.rs  epoll.rs  keylog.rs  kqueue.rs  mod.rs  peer.rs  registry.rs  tun_darwin.rs  tun_linux.rs
boringtun/src/device/api/: command.rs  mod.rs
boringtun/src/device/integration_tests/: mod.rs
boringtun/src/ffi/: benchmark.rs  mod.rs
boringtun/src/noise/: _instant_boottime_android.rs  _instant_boottime_ios.rs  _instant_boottime_tvos.rs  errors.rs  handshake.rs  keys_logger.rs  mod.rs  nizk.rs  rate_limiter.rs  safe_duration.rs  session.rs  tests.rs  timers.rs
boringtun/src/noise/integration_tests/: mod.rs
boringtun/src/packet/: ip.rs  mod.rs  pool.rs  udp.rs  util.rs
boringtun/src/packet/ipv4/: mod.rs  protocol.rs
boringtun/src/packet/ipv6/: mod.rs
boringtun/src/sleepyinstant/: mod.rs  unix.rs  windows.rs
boringtun/src/tokio_device/: mod.rs
boringtun/src/tun/: buffer.rs  channel.rs  mod.rs  pcap.rs  tun_async_device.rs
boringtun/src/udp/: buffer.rs  channel.rs  generic.rs  linux.rs  mod.rs
boringtun/src/udp/socket/: linux.rs  mod.rs
boringtun/tests/: coverage_verification.rs  property_based_crypto.rs  protocol_fuzzing.rs  security_integration.rs
ci/: azure-build.yml  azure-create-release-build.yml  azure-install-rust.yml
config/: .donoteditthisfile
config/coredns/: Corefile
config/peer1/: peer1.conf
config/server/: publickey-server
config/templates/: peer.conf  server.conf
docker/: entrypoint.sh  wg_up.sh
docs/: architecture.md  runbook.md
sleepyinstant/: Cargo.toml
sleepyinstant/examples/: timer.rs
sleepyinstant/src/: lib.rs  unix.rs
sql/: V002__payload_audit.sql  V003__reporting_views.sql  V004__retention_and_mvs.sql  V005__blocked_events_ja3_lite_512.sql  clickhouse.sql  connect.sql  migrate_blocked_events.sql  migrate_obfuscation.sql  schema.sql  views.sql
src/: benchmarks_example.rs  blocklist.rs  config.rs  dashboard.rs  db.rs  events.rs  jni.rs  lib.rs  main.rs  obfuscation.rs  proxy.rs  quic.rs  state.rs  tunnel.rs  wireguard_ffi.h
src/cfjni/: mod.rs
src/crypto/: mod.rs
src/crypto/blake2s/: mod.rs  tests.rs
src/crypto/chacha20poly1305/: mod.rs  poly1305.rs  tests.rs
src/crypto/x25519/: mod.rs  tests.rs
src/db/: audit.rs  inserts.rs  mod.rs  oracle.rs  types.rs  writer.rs
src/device/: allowed_ips.rs  api.rs  dev_lock.rs  drop_privileges.rs  epoll.rs  event_factory.rs  ip_map.rs  kqueue.rs  mod.rs  peer.rs  sock_unix.rs  tun_bsd.rs  tun_darwin.rs  tun_linux.rs  udp_unix.rs
src/device/integration_tests/: mod.rs
src/ffi/: benchmark.rs  mod.rs
src/jni/: mod.rs
src/noise/: errors.rs  h2n.rs  handshake.rs  mod.rs  rate_limiter.rs  session.rs  tests.rs  timers.rs
src/noise/tests/: mod.rs
src/tunnel/: classify.rs  connect.rs  db_helpers.rs  dial.rs  mod.rs  tarpit.rs  tls.rs  transparent.rs
ssl/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
ssl/config/coredns/: Corefile
ssl/config/peer1/: publickey-peer1
ssl/config/templates/: peer.conf  server.conf
ssl/docker/: entrypoint.sh  wg_up.sh
ssl/sql/: indexes.sql  migrate_blocked_events.sql  schema.sql  views.sql
ssl/src/: blocklist.rs  config.rs  dashboard.rs  db.rs  main.rs  obfuscation.rs  proxy.rs  quic.rs  state.rs  tunnel.rs
ssl/static/: index.html
ssl/tests/: obfuscation_e2e.rs  port_separation.rs
tests/: blocklist_refresh.rs  obfuscation_e2e.rs  smoke.sh
