[workspace]
members = ["boringtun", "boringtun-cli", "ssl"]
resolver = "2"

[workspace.dependencies]
time = "=0.3.36"
time-core = "=0.1.7"
time-macros = "=0.2.26"

[profile.release]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[profile.bench]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
