[package]
name = "ssl-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
hyper-proxy = "0.9.1"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["set-header", "fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime", "webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.29", features = ["net"] }
libc = "0.2"
dashmap = "6"
socket2 = { version = "0.5", features = ["all"] }
oracle = { version = "0.6", optional = true }
subtle = "2"
thiserror = "1.0"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
bytes = "1"
base64 = "0.22"

[features]
oracle-db = ["oracle"]

[profile.release]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[profile.bench]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
