[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
documentation = "https://docs.rs/boringtun/0.5.2/boringtun/"
edition = "2018"

[features]
default = []
device = ["socket2", "thiserror"]
# mocks std::time::Instant with mock_instant
mock-instant = ["mock_instant"]

[dependencies]
base64 = "0.13"
hex = { version = "0.4" }
untrusted = "0.9.0"
libc = { version = "0.2", default-features = false }
parking_lot = "0.12"
tracing =  { version = "0.1.29", default-features = false }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ring = { version = "0.17.5", default-features = false }
x25519-dalek = { version = "=2.0.1", features = ["reusable_secrets", "static_secrets"], default-features = false }
rand_core = { version = "0.6.3", features = ["getrandom"], default-features = false }
chacha20poly1305 = { features = ["alloc"], default-features = false, version = "0.10.0-pre.1" }
aead = { version = "0.5.0-pre.2", default-features = false }
blake2 = { version = "0.10", default-features = false }
hmac = "0.12"
mock_instant = { version = "0.2", optional = true }
socket2 = { version = "0.5", features = ["all"], optional = true }
thiserror = { version = "1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos"))'.dependencies]
dispatch = { git = "https://github.com/NordSecurity/rust-dispatch.git", rev = "13447cd7221a74ebcce1277ae0cfc9a421a28ec5" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", default-features = false, features = [
    "time",
    "user",
] }

[dev-dependencies]
etherparse = "0.12"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tokio = { version = ">=1.22", features = ["rt", "net", "sync", "macros"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false
