[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/boringtun"
documentation = "https://docs.rs/boringtun/0.5.2/boringtun/"
edition = "2021"

[features]
default = []
device = ["socket2", "thiserror"]
jni-bindings = ["ffi-bindings", "jni"]
ffi-bindings = ["tracing-subscriber"]
mock-instant = []                      # Deprecated.

[dependencies]
base64 = "0.22"
hex = "0.4"
untrusted = "0.9.0"
libc = "0.2"
parking_lot = "0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ring = "0.17"
x25519-dalek = { version = "2.0.1", features = [
    "reusable_secrets",
    "static_secrets",
] }
rand = "0.8.5"
chacha20poly1305 = "0.10.0-pre.1"
aead = "0.5.0-pre.2"
blake2 = "0.10"
hmac = "0.12"
jni = { version = "0.19.0", optional = true }
mock_instant = { version = "0.3", optional = true } # Deprecated.
socket2 = { version = "0.5.8", features = ["all"], optional = true }
thiserror = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = [
    "time",
    "user",
] }

[dev-dependencies]
etherparse = "0.16"
tracing-subscriber = "0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false
