[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
readme = "../README.md"
repository = "https://github.com/cloudflare/boringtun"
documentation = "https://docs.rs/boringtun/0.5.2/boringtun/"
edition = "2018"

[features]
default = [ "std" ]
alloc = [ ]
std = [ "alloc", "dep:parking_lot", "dep:std-embedded-time" ]
device = ["std", "socket2", "thiserror"]
jni-bindings = ["ffi-bindings", "jni"]
ffi-bindings = ["std", "tracing-subscriber"]

[dependencies]
base64 = { version = "0.13", features = ["alloc"] }
hex = { version = "0.4", features = ["alloc"] }
untrusted = "0.9.0"
libc = { version = "0.2", default-features = false }
parking_lot = { version = "0.12.4", optional = true }
lock_api = "0.4.13"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ring = { version = "0.17", default-features = false }
x25519-dalek = { version = "2.0.1", features = [
    "reusable_secrets",
    "static_secrets",
] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
chacha20poly1305 = "0.10.0-pre.1"
aead = "0.5.0-pre.2"
blake2 = "0.10"
hmac = "0.12"
jni = { version = "0.19.0", optional = true }
socket2 = { version = "0.4.7", features = ["all"], optional = true }
thiserror = { version = "1", optional = true }
embedded-time = { git = "https://github.com/FluenTech/embedded-time.git", branch = "release/v0.13.0" }
std-embedded-time =  { git = "https://github.com/SimonIT/std-embedded-time.git", branch = "release/v0.13.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", default-features = false, features = [
    "time",
    "user",
] }

[dev-dependencies]
etherparse = "0.13"
tracing-subscriber = "0.3"
criterion = { version = "0.3.5", features = ["html_reports"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false
